Fix issue where the context menu popup no longer appeared after closing a tab.

BUG: 185466

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1216490